--- a/AmigoDono.View/packages.config
+++ b/AmigoDono.View/packages.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<packages>
-  <package id="Microsoft.Report.Viewer" version="11.0.0.0" targetFramework="net48" />
-  <package id="Microsoft.ReportViewer.2012.Runtime" version="11.0.3452.0" targetFramework="net48" />
-  <package id="Microsoft.ReportViewer.2015.Runtime" version="12.0.2.2402" targetFramework="net48" />
-  <package id="Microsoft.ReportViewer.WinForms" version="10.0.40219.1" targetFramework="net48" />
+<packages xmlns="urn:packages">
+  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
+  <package id="Microsoft.ReportingServices.ReportViewerControl.Winforms" version="150.900.148" targetFramework="net461" />
+  <package id="Microsoft.SqlServer.Types" version="14.0.1016.290" targetFramework="net461" />
 </packages>
